--- a/lib/petal_web/live/page_live.html.leex
+++ b/lib/petal_web/live/page_live.html.leex
@@ -1,1 +1,3 @@
-<div>Phoenix, Elixir, ________, _________ and LiveView!</div>
+<div x-data="{}">
+	<div>Phoenix, Elixir, ________, <span x-text="'Alpine.js'"></span> and Liveview</div>
+</div>
