--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 @import "../node_modules/nprogress/nprogress.css";
 /* LiveView specific classes for your customizations */
 
