--- a/lib/petal_web/live/page_live.html.leex
+++ b/lib/petal_web/live/page_live.html.leex
@@ -1,3 +1,7 @@
 <div x-data="{}">
-	<div>Phoenix, Elixir, ________, <span x-text="'Alpine.js'"></span> and Liveview</div>
+  <div>Phoenix, Elixir,
+    <span class="animate-ping">Tailwind</span>,
+    <span x-text="'Alpine.js'"></span>
+    and LiveView
+  </div>
 </div>
